Tailwind CSS Basics

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwindcss CLI</title>
-    <link rel="stylesheet" href="../dist/output.css">
-</head>
-<body>
-    <div class="bg-black text-green-500">Hello tailwind CSS CLI</div>
-</body>
+    <link rel="stylesheet" href="../dist/output.css" />
+  </head>
+  <body>
+    <div class="bg-red-500">block element</div>
+
+    <a href="" class=" bg-green-500 px-6 py-2.5 capitalize text-white  my-20 inline-block">Register</a>
+    <span></span>
+    <img src="" alt="">
+    <ul></ul>
+    <li></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="flex flex-wrap bg-gray-500 h-screen justify-center items-center ">
+        <div class="bg-red-500 basis-4/12 h-20">1</div> 
+        <div class="bg-green-500 w-4/12 h-20">2</div>
+ 
+    </div>  -->
+
+    <!-- flex flex-wrap  -->
+    <!-- <div class="flex flex-wrap bg-gray-500 py-10">
+        <div class="bg-red-500 w-4/12">1</div> 
+        <div class="bg-green-500 w-4/12">2</div>
+        <div class="bg-blue-500 w-4/12">3</div>
+        <div class="bg-indigo-500 w-4/12">4</div>
+        <div class="bg-purple-500 w-4/12">5</div>
+        <div class="bg-orange-500 w-4/12">6</div>
+    </div> -->
+
+    <!-- ## Hover Effect on a button -->
+    <!-- <div class="m-20"> 
+        <a href="" class="px-5 py-[10px] capitalize bg-green-600 text-white rounded hover:bg-rose-300 transition-all duration-1000" >Register</a>
+    </div> -->
+
+    <!-- ## Before and After PseudoCLasses -->
+    <!-- <div class=" w-[300px] h-[300px] mx-auto mt-20 bg-gradient-to-r from-green-400 via-red-300 to-green-900 relative after:absolute after:top-full after:left-0 after:w-full after:h-full after:bg-orange-600 after:content-['Hello-world'] ">Hello tailwind CSS CLI</div> -->
+
+    <!-- <div class="bg-[brown]/50 t5ext-[cyan] text-[55px] font-black capitalize mx-auto max-w-screen-xl max-h-" >Hello tailwind CSS CLI</div> -->
+
+    <!-- <div class=" bg-red-400 w-[300px] h-[300px] mx-auto mt-20 border-8 border-green-500 rounded-br-[30px] border-dashed shadow-2xl shadow-[skyblue]"> -->
+
+    <!-- <div class=" bg-red-400 w-[300px] h-[300px] mx-auto mt-20 border-8">Hello tailwind CSS CLI</div> -->
+  </body>
 </html>
